Added custom query, fixed DB population, deleted empty test
Now football teams are sorting via query. DB population is happening via import.sql instead of run method.